--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Undangan 3 Bulanan - Ni Kadek Jegeg Bulan</title>
+    <title>Undangan 3 Bulanan - I Wayan Sudiarsana</title>
 
     <!-- [KREASI BARU] Favicon dan Meta Tags untuk Social Media (WhatsApp, dll.) -->
     <link rel="icon" href="https://raw.githubusercontent.com/wayanku/undangan-metatah-sri-damayanti/main/toWEBP%20(1)/GST03202-min.webp" type="image/webp">
-    <meta property="og:title" content="Undangan 3 Bulanan: Ni Kadek Jegeg Bulan">
-    <meta property="og:description" content="Jumat, 3 Oktober 2030 | 17.00 WITA - Selesai. Undangan upacara 3 Bulanan untuk Ni Kadek Jegeg Bulan.">
+    <meta property="og:title" content="Undangan 3 Bulanan: I Wayan Sudiarsna ">
+    <meta property="og:description" content="Jumat, 3 Oktober 2030 | 17.00 WITA - Selesai. Undangan upacara 3 Bulanan untuk I Wayan Sudiarsana.">
     <!-- Ganti URL gambar ini dengan gambar yang ingin Anda tampilkan di WhatsApp -->
     <meta property="og:image" content="" id="meta-og-image">
     <!-- Ganti URL ini dengan URL website Anda setelah di-hosting -->
@@ -234,7 +234,7 @@
             width: 100%; 
             height: 100%;
             pointer-events: none; /* Agar tidak menghalangi interaksi dengan elemen di belakangnya */
-            background-image: url('https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/bingkai%20bunga.webp?raw=true');
+            background-image: url('https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/bingkai.webp?raw=true');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -683,6 +683,7 @@
             width: 100%; height: 100%;
             overflow: hidden; /* Penting untuk menyembunyikan sebagian ornamen */
             pointer-events: none;
+            display: none; /* [PERMINTAAN] Menyembunyikan semua ornamen */
         }
         .ornament-image {
             position: absolute; /* Gambar ornamen */
@@ -779,8 +780,8 @@
     </audio>
 
     <!-- [PENAMBAHAN] Bunga di pojok bawah -->
-    <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/bunga%20di%20bagian%20cover%20.webp?raw=true" alt="Hiasan Bunga" class="corner-flower bottom-left">
-    <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/bunga%20di%20bagian%20cover%20.webp?raw=true" alt="Hiasan Bunga" class="corner-flower bottom-right">
+    <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/ukiran%20pojok.webp?raw=true" alt="Hiasan Bunga" class="corner-flower bottom-left">
+    <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/ukiran%20pojok.webp?raw=true" alt="Hiasan Bunga" class="corner-flower bottom-right">
 
 
     <div id="music-toggle">
@@ -880,6 +881,7 @@
             <div class="ornament-container">
                 <img src="" alt="Hiasan" class="ornament-image ornament-left" style="--scale: -1; bottom: 30vh;" id="ornament-left-2">
             </div>
+            
             <p>
                 <span class="line-wrapper hidden anim-fade-in-up" style="--delay: 0.1s;">Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir untuk memberikan doa restu.</span>
                 <span class="line-wrapper hidden anim-fade-in-up" style="--delay: 0.2s;">Atas kehadiran dan doa restunya, kami ucapkan terima kasih.</span>
@@ -909,13 +911,13 @@
             <!-- ================== GALERI FOTO DIMULAI ================== -->
             <!-- ========================================================== -->
             <div class="gallery-grid hidden" style="--delay: 0.2s;">
-                <div class="gallery-item item-tall hidden anim-slide-from-left"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03192-min.webp?raw=true" alt="Galeri Foto 1" loading="lazy"> </div>
-                <div class="gallery-item hidden anim-slide-from-right"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03202-min.webp?raw=true" alt="Galeri Foto 2" loading="lazy"> </div>
-                <div class="gallery-item hidden anim-zoom-in"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03247-min.webp?raw=true" alt="Galeri Foto 3" loading="lazy"> </div>
-                <div class="gallery-item item-wide hidden anim-fade-in-up"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03254-min.webp?raw=true" alt="Galeri Foto 4" loading="lazy"> </div>
-                <div class="gallery-item item-tall hidden anim-zoom-in"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03311-min.webp?raw=true" alt="Galeri Foto 5" loading="lazy"> </div>
-                <div class="gallery-item hidden anim-slide-from-left"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03346-min.webp?raw=true" alt="Galeri Foto 6" loading="lazy"> </div>
-                <div class="gallery-item hidden anim-slide-from-right"> <img src="https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03368-min.webp?raw=true" alt="Galeri Foto 7" loading="lazy"> </div>
+                <div class="gallery-item item-tall hidden anim-slide-from-left"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%204.webp?raw=true" alt="Galeri Foto 1" loading="lazy"> </div>
+                <div class="gallery-item hidden anim-slide-from-right"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%205%20bsr.webp?raw=true" alt="Galeri Foto 2" loading="lazy"> </div>
+                <div class="gallery-item hidden anim-zoom-in"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto11.webp?raw=true" alt="Galeri Foto 3" loading="lazy"> </div>
+                <div class="gallery-item item-wide hidden anim-fade-in-up"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201,foto%204,foto%205%20bsr/foto2%20.webp?raw=true" alt="Galeri Foto 4" loading="lazy"> </div>
+                <div class="gallery-item item-tall hidden anim-zoom-in"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%201.webp?raw=true" alt="Galeri Foto 5" loading="lazy"> </div>
+                <div class="gallery-item hidden anim-slide-from-left"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%204.webp?raw=true" alt="Galeri Foto 6" loading="lazy"> </div>
+                <div class="gallery-item hidden anim-slide-from-right"> <img src="https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%205%20bsr.webp?raw=true" alt="Galeri Foto 7" loading="lazy"> </div>
             </div>
             <!-- ========================================================== -->
             <!-- =================== GALERI FOTO SELESAI =================== -->
@@ -1043,7 +1045,7 @@
         const invitationData = {
             // --- DATA UTAMA ---
             person: {
-                name: "Ni Kadek Jegeg Bulan",
+                name: "I Wayan Sudiarsana",
                 nickname: "Jegeg",
                 relation: "Putra dari pasangan", // Contoh: "Putra pertama dari", "Putri bungsu dari"
                 ceremonySubject: "Upacara 3 Bulanan putra kami." // Contoh: "Pernikahan putra-putri kami."
@@ -1070,7 +1072,7 @@
                 accountName: "a.n. NAMA CONTOH"
             },
             quote: {
-                text: `"Devan bhavayatanena te deva bhavayantu vah parasparam bhavayantah sreyah param avapsyatha"`,
+                text: "Devan bhavayatanena te deva bhavayantu vah parasparam bhavayantah sreyah param avapsyatha",
                 source: "(Bhagavad Gita 3:11)",
                 translation: "Dengan ini (Yadnya), kami berbakti kepada Hyang Widhi dan dengan ini pula Hyang Widhi memelihara dan mengasihi kamu. Dengan saling memelihara satu sama lain, kamu akan mencapai kebaikan yang maha tinggi."
             },
@@ -1079,29 +1081,29 @@
             // ==========================================================
             images: {
                 // Gambar untuk ikon tab browser dan tampilan di WhatsApp
-                favicon: "https://raw.githubusercontent.com/wayanku/undangan-metatah-sri-damayanti/main/toWEBP%20(1)/GST03202-min.webp",
-                ogImage: "https://raw.githubusercontent.com/wayanku/undangan-metatah-sri-damayanti/main/toWEBP%20(1)/GST03202-min.webp",
+                favicon: "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%201.webp?raw=true",
+                ogImage: "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%201.webp?raw=true",
                 // Foto profil utama (tetap)
-                profile: "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03202-min.webp?raw=true",
+                profile: "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%204.webp?raw=true",
                 // Tiga gambar untuk slider di sampul depan
                 coverSlides: [
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03192-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03202-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03247-min.webp?raw=true"
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%205%20bsr.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto11.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto2%20.webp?raw=true"
                 ],
                 // Gambar untuk kartu detail acara
-                eventCard: "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03368-min.webp?raw=true",
+                eventCard: "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%201.webp?raw=true",
                 gallery: [
                     // URL gambar untuk galeri foto diisi langsung di HTML untuk kontrol layout yang lebih baik.
                 ],
                 // Gambar untuk slider "Momen Spesial"
                 moments: [
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03379-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03382-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03385-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03428-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03254-min.webp?raw=true",
-                    "https://github.com/wayanku/undangan-metatah-sri-damayanti/blob/main/toWEBP%20(1)/GST03311-min.webp?raw=true"
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%204.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%205%20bsr.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto11.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto2%20.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%201.webp?raw=true",
+                    "https://github.com/wayanku/undangan-3-bulan-tema-1/blob/main/foto%201%2Cfoto%204%2Cfoto%205%20bsr/foto%204.webp?raw=true"
                 ],
                 // Ornamen (tetap)
                 ornament: "https://raw.githubusercontent.com/wayanku/undangan-metatah/main/tl.webp"
